--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+#root {
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+html,
+body {
   min-height: 100vh;
+  height: 100%;
+
+}
+
+#dark.app {
+  background-color: rgb(53, 53, 53);
+  color: rgb(204, 247, 255);
+  height: 100%;
+  transition: background-color 0.25s ease-in-out;
+}
+
+#light.app  {
+  background-color: rgba(255, 156, 156, 0.157);
+  color: rgb(65, 22, 22);
+  height: 100%;
+  transition: background-color 0.25s ease-in-out;
+}
+
+.toggle__container {
+  padding-top: 2rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.toggle {
+  font-size: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.toggle#sun{
+  color: rgb(255, 187, 0);
+}
+
+#dark .toggle#sun {
+  color: rgb(39, 104, 136);
+}
+
+.toggle#moon{
+  color: grey;
+}
+
+#dark .toggle#moon {
+  color: rgb(73, 53, 206)
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch-checkbox {
+  padding: 10px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.3s ease-in-out;
+}
+
+input:checked + .slider {
+  background-color: #509ef1;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  background-color: rgb(182, 255, 251);
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+#dark .slider {
+  box-shadow: 0 0 10px 2px #2196f3;
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* Content */
+.description {
+  margin: 1rem 2rem;
+}
+
+h1 {
+  margin: 2rem 1rem 1rem;
+  letter-spacing: 3px;
+}
+
+p {
+  margin: 1rem;
+  opacity: 0.8;
+  line-height: 1.6rem;
 }
